# crypto-RL

./: .gitignore  pyproject.toml
crypto-agent/: pyproject.toml
crypto-agent/data/raw/candles_1h/dt=2019-01-01/: candles.parquet
crypto-agent/data/raw/candles_1h/dt=2019-01-02/: candles.parquet
crypto-agent/data/raw/candles_1h/dt=2019-01-03/: candles.parquet
crypto-agent/data/raw/candles_1h/dt=2019-01-04/: candles.parquet
crypto-agent/data/raw/candles_1h/dt=2019-01-05/: candles.parquet
crypto-agent/data/raw/candles_1h/dt=2019-01-06/: candles.parquet
crypto-agent/data/raw/candles_1h/dt=2019-01-07/: candles.parquet
crypto-agent/data/raw/candles_1h/dt=2019-01-08/: candles.parquet
crypto-agent/data/raw/candles_1h/dt=2019-01-09/: candles.parquet
crypto-agent/data/raw/candles_1h/dt=2019-01-10/: candles.parquet
crypto-agent/data/raw/candles_1h/dt=2019-01-11/: candles.parquet
crypto-agent/data/raw/candles_1h/dt=2019-01-12/: candles.parquet
crypto-agent/data/raw/candles_1h/dt=2019-01-13/: candles.parquet
crypto-agent/data/raw/candles_1h/dt=2019-01-14/: candles.parquet
crypto-agent/data/raw/candles_1h/dt=2019-01-15/: candles.parquet
crypto-agent/data/raw/candles_1h/dt=2019-01-16/: candles.parquet
crypto-agent/data/raw/candles_1h/dt=2019-01-17/: candles.parquet
crypto-agent/data/raw/candles_1h/dt=2019-01-18/: candles.parquet
crypto-agent/data/raw/candles_1h/dt=2019-01-19/: candles.parquet
crypto-agent/data/raw/candles_1h/dt=2019-01-20/: candles.parquet
crypto-agent/data/raw/candles_1h/dt=2019-01-21/: candles.parquet
crypto-agent/data/raw/candles_1h/dt=2019-01-22/: candles.parquet
crypto-agent/data/raw/candles_1h/dt=2019-01-23/: candles.parquet
crypto-agent/ingestion/: fetch_ohlcv.py  fetch_onchain.py
(+2283 files in other folders)
